# inflow

./: .gitignore  CODE_REVIEW.md  Cargo.toml  LICENSE  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  REFACTORING_OVERVIEW.md  REFACTORING_PROGRESS.md  REVIEW_SUMMARY.md
.github/workflows/: ci.yml
docs/: ADDING_PROVIDER.md  EODHD_LOGIC_REVIEW.md  OFFSET_CAP_RECOVERY_FINAL.md  OFFSET_CAP_RECOVERY_PROPOSAL.md  PRICE_INFORMED_RECOVERY_IMPLEMENTATION.md  PROACTIVE_STRIKE_PARTITIONING.md  PROVIDER_FEATURES_COMPARISON.md  RESUME_LOGIC_REVIEW.md  SUBDIVISION_LOGIC_ANALYSIS.md  WEEKEND_AWARE_RESUME.md  YAHOO_RESUME_IMPLEMENTATION.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs  scan.rs  store.rs
src/commands/: check.rs  config.rs  delete.rs  download.rs  list.rs  mod.rs  status.rs
src/pipeline/: consumer.rs  mod.rs  orchestrator.rs  producer.rs  types.rs
src/providers/: eodhd.rs  mod.rs  yahoo.rs
src/providers/eodhd/: http.rs  mod.rs  pagination.rs  parsing.rs  types.rs
src/providers/yahoo/: http.rs  mod.rs  parsing.rs
src/utils/: constants.rs  date.rs  json.rs  mod.rs  polars.rs  resume.rs  tables.rs
tests/: cache_store.rs  consumer.rs  eodhd_download.rs  fetch_skip_logic.rs  pipeline_orchestrator.rs  resume_logic_weekends.rs  scan.rs  status_command.rs  yahoo_download.rs
tests/common/: mod.rs
tests/fixtures/: eodhd_compact.json  eodhd_empty.json  eodhd_paginated_page1.json  eodhd_paginated_page2.json
